force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>States the Account Manager related to the forecast.</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
    <type>Lookup</type>
</CustomField>