force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_ActiveContracts__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActiveContracts__c</fullName>
    <description>States number of Active contracts.</description>
    <label>Active Contracts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>