force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_ConsensusDemandPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ConsensusDemandPlan__c</fullName>
    <label>Consensus Demand Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>