force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_CurrentSalesPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CurrentSalesPlan__c</fullName>
    <description>User Editable field to capture current sales plan for forecast</description>
    <label>Current Sales Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>