force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_CurrentSalesPlanMTN__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CurrentSalesPlanMTN__c</fullName>
    <label>Current Sales Plan (MTN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>