force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>States the Product Location related to the forecast.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
    <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
    <type>Lookup</type>
</CustomField>