force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_OpenOrders__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OpenOrders__c</fullName>
    <description>States number of Open orders.</description>
    <label>Open Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>