force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_OpenQuotes__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OpenQuotes__c</fullName>
    <description>States number of Open Quotes.</description>
    <label>Open Quotes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>