force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ShippedQuantity__c</fullName>
    <description>States the values of shipped quantity for each product.</description>
    <label>Shipped Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>