force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_StatisticalBaselineForecast__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_StatisticalBaselineForecast__c</fullName>
    <description>States the baseline forecast data received from O9</description>
    <label>Statistical Baseline Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>