force-app/main/default/objects/AdvAccountForecastFact/fields/PMC_SS_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_UnitofMeasure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to track unit of measure</description>
    <label>Unit of Measure</label>
    <referenceTo>UnitOfMeasure</referenceTo>
    <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
    <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
    <type>Lookup</type>
</CustomField>